--- a/ejemplo1_TerceraParte/counterDlg.ui
+++ b/ejemplo1_TerceraParte/counterDlg.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>399</width>
-    <height>261</height>
+    <width>400</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Counter</string>
   </property>
-  <widget class="QPushButton" name="buttonStart">
+  <widget class="QPushButton" name="button">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>160</y>
-     <width>121</width>
-     <height>51</height>
+     <x>50</x>
+     <y>150</y>
+     <width>131</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -36,17 +36,53 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="buttonRestart">
+  <widget class="QPushButton" name="restart">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>160</y>
-     <width>121</width>
-     <height>51</height>
+     <y>230</y>
+     <width>131</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
     <string>RESTART</string>
+   </property>
+  </widget>
+  <widget class="QSlider" name="verticalSlider">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>140</y>
+     <width>29</width>
+     <height>160</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="QLCDNumber" name="lcdNumber_F">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>190</y>
+     <width>111</width>
+     <height>51</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="frecuenciaL">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>150</y>
+     <width>121</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>FRECUENCIA</string>
    </property>
   </widget>
  </widget>
